Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-457

WebUI warning at startup

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 2.1.4
    • Tools
    • None

    Description

      There's a warning / error showing up in /var/log/messages at startup:

      Sep 23 20:53:49 loki traffic_manager[19440]:

      {139746315675408} ERROR: [WebHttpTreeInit]: unable to import file share/trafficserver/navigation_tree.xml
      Sep 23 20:53:49 loki traffic_manager[19440]: {139746315675408}

      ERROR: (last system error 2: No such file or directory)

      Attachments

        1. TS-457.diff
          10 kB
          Leif Hedstrom

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: