TS-457 Eliminate a startup warning

This also makes more WebUI code contitional.

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1002270 13f79535-47bb-0310-9956-ffa450edef68