proxy/mgmt2/cluster/ClusterCom.cc
@@ -1214,8 +1214,10 @@ ClusterCom::handleMultiCastFilePacket(char *last, char *ip)
             delete our_rec_cfg;
             delete our_locals_ht;
           }
+#ifndef NO_WEBUI
           if (!file_update_failure)
             WebHttpTreeRebuildJsTree();
+#endif
         }
 
         if (!file_update_failure && (rb->updateVersion(reply, our_ver, ver) != OK_ROLLBACK)) {
